src/objects/Desk_Cases__c.object
<CustomObject>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mbr_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Desk Cases</relationshipLabel>
        <relationshipName>Desk_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mbr_email__c</fullName>
        <label>mbr_email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>mbr_pk__c</fullName>
        <label>mbr_pk</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ticket_id_temp__c</fullName>
        <label>Ticket Id temp</label>
        <referenceTo>Desk_Case_Email__c</referenceTo>
        <relationshipLabel>Desk Cases</relationshipLabel>
        <relationshipName>Desk_Cases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Desk Case</label>
    <nameField>
        <label>Desk Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Desk Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>